--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -2,22 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-h3, h2 {
- /*  @apply font-fira_retina; */
+h3,
+h2 {
+  /*  @apply font-fira_retina; */
   font-family: 'Fira Code Retina';
   font-size: 15px;
 }
 
 html {
-    @apply bg-dark-background;
-    height: stretch;
-    width: stretch;
-    margin: 30px;
+  @apply bg-dark-background;
+  height: calc(100vh - 60px);
+  width: stretch;
+  margin: 30px;
+  overflow: hidden;
 }
 
 body {
-    height: stretch;
-    width: stretch;
+  height: stretch;
+  width: stretch;
 }
 
 main.page {
@@ -41,7 +43,7 @@ main.page {
   width: 100%;
   min-height: 35px;
   border-bottom: 1px solid #1E2D3D;
-  }
+}
 
 #section-content-title:hover {
   cursor: pointer;
@@ -84,12 +86,15 @@ main.page {
     @apply bg-blue-background flex flex-col;
     justify-content: space-between;
     height: auto;
-    min-height: stretch; /* This allows the page view for mobile to be full height when the content is less than the screen height. */
+    min-height: stretch;
+    /* This allows the page view for mobile to be full height when the content is less than the screen height. */
     width: 100%;
     width: auto;
   }
 
-  #page-menu, #nav-logo, #filter-menu {
+  #page-menu,
+  #nav-logo,
+  #filter-menu {
     border: 0px;
   }
 
@@ -98,15 +103,15 @@ main.page {
   }
 
   #section-content-title {
-  width: 100%;
-  height: 30px;
-  background-color: #1E2D3D;
-  align-items: center;
-  padding: 0 25px;
+    width: 100%;
+    height: 30px;
+    background-color: #1E2D3D;
+    align-items: center;
+    padding: 0 25px;
   }
 
   .submenu .title {
-    display:flex;
+    display: flex;
     align-items: center;
     padding: 0 25px;
     width: 100%;
@@ -115,11 +120,12 @@ main.page {
     margin-bottom: 3px
   }
 
-  #left, #contact-menu {
+  #left,
+  #contact-menu {
     border-right: 0px;
   }
 
-    /* contact */
+  /* contact */
   #contact-me #left {
     padding: 35px 25px;
   }
@@ -131,7 +137,7 @@ main.page {
     font-size: 14px !important;
   }
 
-  #social-icons > a {
+  #social-icons>a {
     width: 55px !important;
   }
 
@@ -139,12 +145,17 @@ main.page {
 
 /* LG - XL */
 @media (min-width: 1024px) {
-  #page-menu, #nav-logo, #filter-menu {
+
+  #page-menu,
+  #nav-logo,
+  #filter-menu,
+  #social-title {
     min-width: 275px !important;
     max-width: 275px !important;
   }
 
-  #page-menu, #filter-menu {
+  #page-menu,
+  #filter-menu {
     font-size: 14px;
   }
 
@@ -155,14 +166,15 @@ main.page {
   #mobile-page-title {
     display: none;
   }
+
   /* contact */
   #contact-me #left {
-    padding: 50px 25px 0px 25px;
+    padding: 20px 25px 0px 25px;
   }
 
   #contact-form {
-      max-width: 220px;
-      width: 100%;
+    max-width: 220px;
+    width: 100%;
   }
 
   main.page {
@@ -171,21 +183,22 @@ main.page {
 }
 
 /* 2XL */
-@media (min-width: 1536px) {
-
-}
+@media (min-width: 1536px) {}
 
 /* 2K */
 @media (min-width: 1920px) {
 
 
-  #page-menu, #nav-logo, #filter-menu {
+  #page-menu,
+  #nav-logo,
+  #filter-menu,
+  #social-title {
     min-width: 310px !important;
     max-width: 310px !important;
   }
 
   /* header */
-  #navbar > nav {
+  #navbar>nav {
     height: 50px !important;
     font-size: 14px !important;
   }
@@ -197,30 +210,35 @@ main.page {
     font-size: 14px !important;
   }
 
-  #social-icons > a {
+  #social-icons>a {
     width: 55px !important;
   }
 
-  #social-icons > a > svg, footer > a > svg {
-    width: 1.5rem !important; /* 20px */
-    height: 1.5rem !important; /* 20px */
+  #social-icons>a>svg,
+  footer>a>svg {
+    width: 1.5rem !important;
+    /* 20px */
+    height: 1.5rem !important;
+    /* 20px */
   }
 
   /* about */
   #commented-text {
     font-size: 16px !important;
   }
-  #page-menu, #filter-menu {
+
+  #page-menu,
+  #filter-menu {
     font-size: 16px !important;
   }
 
   /* contact */
   #contact-me #left {
-    padding: 100px 25px 0px 25px !important;
+    padding: 50px 25px 0px 25px !important;
   }
 
   .form-content {
-    padding: 100px 100px !important;
+    padding: 50px 50px !important;
     font-size: 16px !important;
   }
 }
@@ -229,23 +247,17 @@ main.page {
 /* 
  * Mobile min view to tablet max view (width: 0 to 1020)
 */
-@media screen (max-width: 1020px) {
-
-}
+@media screen and (max-width: 1020px) {}
 
 /* 
  * Tablet min view to desktop medium view (width: 1020 to 1920) (height: 0 to 1080)
 */
-@media screen (min-width: 1020px) and (max-width: 1920px) and (max-height: 1080px) {
-
-}
+@media screen and (min-width: 1020px) and (max-width: 1920px) and (max-height: 1080px) {}
 
 /* 
  * Desktop medium view to desktop max view (width: 1920 to infinte) (height: 1080 to infinite)
 */
-@media screen (min-width: 1920px) and (min-height: 1080px) {
-
-}
+@media screen and (min-width: 1920px) and (min-height: 1080px) {}
 
 /* Borders */
 
@@ -292,8 +304,8 @@ main.page {
 /* Fonts */
 
 @font-face {
-    font-family: "Fira Code Light";
-    src: url("./fonts/fira-code/FiraCode-Light.ttf") format('truetype');
+  font-family: "Fira Code Light";
+  src: url("./fonts/fira-code/FiraCode-Light.ttf") format('truetype');
 }
 
 @font-face {
